# attack-chain-mapper

./: .gitignore  CLAUDE.md  LICENSE  README.md  claude_code_prompt_phase1_2.md  claude_code_prompt_phase3_4.md  pyproject.toml
.github/workflows/: ci.yml
acm/: __init__.py  __main__.py
demo/: run_demo.py
demo/fixtures/: goad_sample.json
src/: __init__.py  __main__.py
src/ai/: client.py
src/ai/prompts/: finding_detail.py
src/api/: app.py
src/graph/: builder.py  inference.py  pathfinder.py  scorer.py
src/ingestion/: detector.py  schema.py  validator.py
src/ingestion/adapters/: __init__.py  generic.py  strike7.py
src/renderer/: html.py  json_export.py
src/storage/: __init__.py  store.py
synthetic/: generator.py
tasks/: todo.md
tests/: test_adapters.py  test_ai_client.py  test_ai_detect.py  test_builder.py  test_chain_inference.py  test_detector.py  test_pathfinder.py  test_schema.py  test_store.py  test_strike7_adapter.py  test_validator.py
tests/fixtures/: generic_sample.json  strike7_sample.json
