[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attack-chain-mapper"
version = "0.2.0"
description = "AI-powered pentest attack chain visualizer"
readme = "README.md"
license = {text = "MIT"}
keywords = ["pentesting", "security", "attack-chain", "visualization", "mitre-attack"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "anthropic>=0.20",
    "click>=8.0",
    "jinja2>=3.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.24", "pytest-asyncio>=0.21"]

[project.scripts]
acm = "src.__main__:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "synthetic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
